# junk

./: .gitignore  Dockerfile
algos/: .pylintrc
algos/algos-coursera/: pom.xml
algos/cracking/: README.md  stack.cpp
algos/misc/union-area/: Main.hs  README.md  union-area.cabal
bash/: arrays.sh  iter_args.sh  parse_options.sh  parse_options_and_args.sh  parse_options_with_values.sh  read_file.sh  read_user_input.sh  substitute.sh
c/: calc.c  g-return-if-fail-example.c  glib-value.c  gst-video-info-example.c
c-progs/: paren-sequence-expression.c
cpp/: a-potential-double-free.cpp  base-class-virtual-dstor.cpp  casting-and-fast-sqrt.c  copy-elision.cpp  cstor-vs-factory.cpp  gmp-simple.cc  inheritance-cstor-and-dstor.cpp  move-cstor.cpp  overrides-must-be-virtual.cpp  scope-with-subclass.cpp  simple-logger.cpp  std-inserter.cpp  xor-doublely-linked-list.c
cpp/ray/: Makefile  (+13 more)
cv/: Makefile  backgroundSubtractor.cpp  faceTracker.cpp  fft.py  hsvThreshold.cpp  imShow.cpp  resizeImage.cpp  showPixels.cpp  showVideo.cpp
emacs/: 1.org  2.org  getting-started-with-org-mode.org
gst/: Makefile  basic-tutorial-1.c  rpi-cam-client.sh  rpi-cam-server.sh  write-webcam.sh  writeWebcam.c  writeWebcam.cpp
haskell/fly/: CHANGELOG.md  Main.hs  fly.cabal
haskell/junk/: Boxes.hs  Main.hs  SimpleParse.hs  junk.cabal
net/: net.py  notes.md  raw-socket-broadcast.py  raw-socket-listen.py  udp-broadcast.py  udp-listen.py
python/: setup.py
stats/: g-h-filter.ipynb
vidplay/: README.md  common.h  queue.h  simple-audio-2.c  simple-audio.c  tut1.c  tut2.c  tut3.c  tut4.c
(+177 files in other folders)
