cabal-version:       >=1.10

name:                fly
version:             0.1.0.0
build-type:          Simple

executable fly
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.13 && <4.14,
    ncurses >= 0.2.16 && < 1,
    time >= 1 && < 2,
    mtl >= 2.2.2 && < 3
  -- hs-source-dirs:
  default-language:    Haskell2010
