cabal-version:       >=1.10

name:                junk
version:             0.1.0.0
author:              Sebastian Mueller
maintainer:          sebastian.mueller@nirovision.com
build-type:          Simple

executable junk
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.13 && <4.14,
    text >= 1.2.4 && < 2,
    parsec >= 3.1 && < 4
  -- hs-source-dirs:
  default-language:    Haskell2010
