cabal-version:       >=1.10

name:                union-area
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md

executable union-area
  main-is:             Main.hs
  build-depends:
    base >=4.13 && <4.14,
    containers >= 0.6 && < 1,
    sort >= 1.0 && < 2
  default-language:    Haskell2010
